--- a/css/base.css
+++ b/css/base.css
@@ -1,12 +1,15 @@
 :root {
 --branco: #FFF;
 --preto: #000;
+--verde: rgb(25, 221, 68);
+--verdeEscuro: #032506;
 
 --montserrat: 'Montserrat', sans-serif;
 }
 
 body {
     font-family: var(--montserrat);
+    background-image: url(../assets/bg.jpg);
 }
 
 
